tests/derive_ui/bool_required.stderr
error: required is meaningless for bool
  --> $DIR/bool_required.rs:14:19
   |
14 |     #[clap(short, required = true)]
   |                   ^^^^^^^^
